Fix Google Translate header visibility and navbar overlap

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -66,12 +66,10 @@ html[data-theme="dark"] {
   --ifm-background-color: var(--ifm-color-black);
 }
 
-.markdown > h4 {
+.markdown>h4 {
   --ifm-h4-font-size: 1.25rem;
 
-  margin-bottom: calc(
-    var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading)
-  );
+  margin-bottom: calc(var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading));
   margin-top: calc(var(--ifm-h4-vertical-rhythm-top) * var(--ifm-leading));
 }
 
@@ -93,8 +91,7 @@ html[data-theme="dark"] {
   svg {
     height: 1.5rem;
     width: 1.5rem;
-    transition: color var(--ifm-transition-fast)
-      var(--ifm-transition-timing-default);
+    transition: color var(--ifm-transition-fast) var(--ifm-transition-timing-default);
 
     &:hover,
     &:focus {
@@ -126,20 +123,14 @@ html[data-theme="dark"] {
 div[class^="announcementBar_"] {
   font-size: 18px;
 
-  --site-announcement-bar-stripe-color1: hsl(
-    var(--site-primary-hue-saturation) 85%
-  );
-  --site-announcement-bar-stripe-color2: hsl(
-    var(--site-primary-hue-saturation) 95%
-  );
+  --site-announcement-bar-stripe-color1: hsl(var(--site-primary-hue-saturation) 85%);
+  --site-announcement-bar-stripe-color2: hsl(var(--site-primary-hue-saturation) 95%);
 
-  background: repeating-linear-gradient(
-    35deg,
-    var(--site-announcement-bar-stripe-color1),
-    var(--site-announcement-bar-stripe-color1) 20px,
-    var(--site-announcement-bar-stripe-color2) 10px,
-    var(--site-announcement-bar-stripe-color2) 40px
-  );
+  background: repeating-linear-gradient(35deg,
+      var(--site-announcement-bar-stripe-color1),
+      var(--site-announcement-bar-stripe-color1) 20px,
+      var(--site-announcement-bar-stripe-color2) 10px,
+      var(--site-announcement-bar-stripe-color2) 40px);
 
   height: fit-content;
 }
@@ -162,7 +153,7 @@ div[class^="announcementBar_"] {
   }
 }
 
-.navbar .dropdown > a.active {
+.navbar .dropdown>a.active {
   color: var(--ifm-color-primary);
 }
 
@@ -210,15 +201,15 @@ select[data-testid="example-pairing-select"] {
   max-width: 135%;
 
   thead {
-      color: var(--ifm-color-primary-darker);
-      background-color: var(--ifm-color-gray-300);
-      font-size: large;
-      text-align: left;
-      text-wrap: nowrap;
+    color: var(--ifm-color-primary-darker);
+    background-color: var(--ifm-color-gray-300);
+    font-size: large;
+    text-align: left;
+    text-wrap: nowrap;
   }
 
   td {
-      font-size: small;
+    font-size: small;
   }
 }
 
@@ -231,8 +222,21 @@ select[data-testid="example-pairing-select"] {
 
 .dropdown__link.has-nested-items::after {
   content: '➜';
-  margin-left: 10px;    // spacing (use margin instead of padding when using flex)
+  margin-left: 10px; // spacing (use margin instead of padding when using flex)
   font-size: 1em;
   line-height: 1;
   display: inline-block;
+}
+
+/* Fix for Google Translate making headers invisible */
+html.translated-ltr .hash-link,
+html.translated-rtl .hash-link {
+  opacity: 1 !important;
+  visibility: visible !important;
+}
+
+/* Fix for Google Translate bar overlapping the navbar */
+html.translated-ltr .navbar,
+html.translated-rtl .navbar {
+  top: 40px;
 }
